feature(header-content):: update header and sidebar

--- a/src/app/Arquimentor/components/header-content/header-content.component.html
+++ b/src/app/Arquimentor/components/header-content/header-content.component.html
@@ -6,22 +6,26 @@
       <img src="https://cdn.discordapp.com/attachments/1149549726748921942/1154114469371334736/image.png">
     </div>
     <div class="buttons">
-        <mat-icon>notifications</mat-icon>
+        <mat-icon class="notifications">notifications</mat-icon>
+        <mat-icon class="profile">account_circle</mat-icon>
     </div>
   </div>
 
-  <mat-sidenav-container class="content"
-                         >
-    <mat-sidenav #snav [mode]="'push'" class="sidebar-content">
-      <mat-nav-list class="sidebar" >
-        <a href="#"><mat-icon>home</mat-icon> home</a> <br>
-        <a href="#"><mat-icon>account_circle</mat-icon> my perfil</a>
+  <mat-sidenav-container class="content">
+    <mat-sidenav #snav [mode]="'side'">
+      <mat-nav-list>
+        <a href="#home" class="link"><mat-icon>home</mat-icon> Home</a>
+        <a href="#my profile" class="link"><mat-icon>account_circle</mat-icon> My profile</a>
 
+        <a href="#back" class="link" id="back"><mat-icon>meeting_room</mat-icon> Back </a>
       </mat-nav-list>
     </mat-sidenav>
 
     <mat-sidenav-content>
-      <p>hola</p>
+
+      <!--aqui van las etiquetas del contenido-->
+      <p>contenido aqui</p>
+
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
