--- a/src/app/Arquimentor/components/header-content/header-content.component.css
+++ b/src/app/Arquimentor/components/header-content/header-content.component.css
@@ -6,7 +6,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: #517260;
+
 }
 
 .header{
@@ -36,41 +36,72 @@
 }
 
 .buttons{
+  display: flex;
+  align-items: center;
   align-self: center;
-  padding: 0 50px;
+  padding: 0 5px;
   margin-right: 20px;
 }
-
+.notifications{
+  font-size: 40px;
+  width: 40px;
+  height: 40px;
+}
+.profile{
+  padding: 0 50px;
+  font-size: 70px;
+  width: 70px;
+  height: 70px;
+}
 /* sidebar*/
-.content{
-  flex: 1 0 auto;
-}
-.sidebar-content{
 
-}
 mat-sidenav{
-  width: 150px;
-  display: flex;
-  flex-direction: column;
+  width: 200px;
+  background-color: #f1f1f1;
 }
 
 mat-nav-list{
-
   margin: 0;
-  padding: 20px 0;
-  color: blue;
+  padding: 10px 15px;
+
 }
 
-.sidebar{
-  padding: 10px;
-}
+.link{
 
-.sidebar a{
-  padding:  0;
-}
-.sidebar :hover{
-  background-color: red;
-  text-decoration: none;
-  align-content: center;
+  display: flex;
   align-items: center;
+  border-radius: 5px;
+  padding: 8px 0;
+  margin: 10px 0;
+  text-decoration: none;
+  color: black;
+}
+
+.link mat-icon{
+  padding: 0 15px;
+}
+
+mat-nav-list :hover{
+  background-color: #4f6f5d;
+  color: white;
+}
+
+#back{
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  order: 1;
+  margin-top: auto;
+  background-color: #4f6f5d;
+  color: white;
+  padding-right: 80px;
+}
+
+#back:hover{
+  color: black;
+}
+
+.content{
+  flex: 1 0 auto;
+  background-color: #517260;
 }
